포물선 랜던 빵바레

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="face face-4"><div class="postmark"></div></div>
     <div class="face face-5"><div class="postmark"></div></div>
     <div class="face face-6"><div class="postmark"></div></div>
-    <div class="particles">
+    <!-- <div class="particles">
       <div>H</div>
       <div>A</div>
       <div>P</div>
@@ -37,7 +37,7 @@
       <div>E</div>
       <div>A</div>
       <div>R</div>
-    </div>
+    </div> -->
   </div>
   <h1 class="text">HAPPY NEW YEAR!</h1>
 </body>
